fix: kapt with javacOptions